--- a/missingkids/less/footer.less
+++ b/missingkids/less/footer.less
@@ -87,6 +87,7 @@
                   float: left;
                   width: 119px;
                   word-break: break-all;
+                  padding-bottom: 0;
                   @media (min-width: @screen-sm) {
                     width: 110px;
                   }
